2007-09-23  Goedson Teixeira Paixao  <goedson@debian.org>

	* doc/C/gnotime.xml: Added section about reports.

2007-09-21  Goedson Teixeira Paixao  <goedson@debian.org>

	* doc/C/gnotime.xml: 
	- Fixed some typos.
	- Updated section about timeout dialogs
	- Updated Free Software Foundation address
	- Added section about gnotime-remote

2007-09-20  Goedson Teixeira Paixao  <goedson@debian.org>

	* pt_BR.po: Fixed typo.

2007-09-17  Goedson Teixeira Paixao  <goedson@debian.org>

	* doc/C/gnotime.xml: Added information about creating new projects.
	Removed the "The New Project Dialog" section

	* src/menus.c: Renamed the Edit menu to Projects

2007-09-15  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/props-proj.c (prop_dialog_new): changed the section name for
	the properties dialog.

	* doc/C/gnotime.xml: Added information about the properties dialog
	and started to restructure the manual

2007-09-13  Goedson Teixeira Paixao  <goedson@debian.org>

	* doc/C/gnotime.xml: fixed some typos and reviewed the text for
	sections 1 to 3.

	* src/export.c (export_err, export_really): Use gtk_message_dialog
	instead of the deprecated gnome_error_dialog
	(export_file_picker): Use GtkFileChooser instead of the deprecated
	GtkFileSelection
	(export_show_error_message): created utility function to display
	error messages in the export module

2007-09-11  Goedson Teixeira Paixao  <goedson@debian.org>

	* doc/C/gnotime.xml: Update the manual up to the Customization
	section.

2007-09-08  Goedson Teixeira Paixao  <goedson@debian.org>

	* po/*.po*: Update message template files with some missing
	strings.

	* po/pt_BR.po: Fixed some Brazilian Portuguese translations.

2007-09-06  Goedson Teixeira Paixao  <goedson@debian.org>

	* po/pt_BR.po: Update Brazilian Portuguese translation.
	
	* po/*.po: Updated with new messages.

	* glade/plugin_editor.glade: Fixed some typos.

	* po/gnotime-2.0.pot: Update template file.

	* po/Makefile.in.in: Added.

