@@ -1,5 +1,8 @@
 2007-09-23  Goedson Teixeira Paixao  <goedson@debian.org>
 
+	* doc/Makefile.am: disabled installation of manual translations
+	since they are outdated
+
 	* doc/C/gnotime.xml: Added section about reports.
 
 2007-09-21  Goedson Teixeira Paixao  <goedson@debian.org>
